--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,12 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_database: ^3.1.5
+  progress_dialog: ^1.2.0
   http: ^0.12.1
   geolocator: ^5.1.3
+  firebase_messaging: ^6.0.13
+  iso_countries: ^1.0.3
+
   # Add the dependencies for any other Firebase products you want to use in your app
   # For example, to use Firebase Authentication and Cloud Firestore
   firebase_auth: ^0.14.0+5
