--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ dependencies:
   countdown: ^0.1.0
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
+  share: ^0.6.4
   firebase_database: ^3.1.5
   progress_dialog: ^1.2.0
+  url_launcher: ^5.4.5
   http: ^0.12.1
   geolocator: ^5.1.3
   firebase_messaging: ^6.0.13
